[TASK] Added min-height to snippet preview container to prevent layout shifting

--- a/Resources/Private/SCSS/Yoast.scss
+++ b/Resources/Private/SCSS/Yoast.scss
@@ -113,6 +113,7 @@
 }
 
 .yoast-seo-snippet-preview-styling {
+	min-height: 235px;
 	fieldset {
 		legend {
 			font-size: 12px !important;
